--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
     <div class="about-us fade-in">
       <h2>Your Dream Into Reality</h2>
 
-      <p class="fade-in">Abhee Smart Home Systems - Empowering Homes with Intelligent Living</p>
+      <p class="fade-in">Smart Home Systems - Empowering Homes with Intelligent Living</p>
 
     </div>
 
@@ -110,10 +110,10 @@
 
     <div class="history">
       <div class="vertical-line"></div>
-      <h2>Abhee Smart Home Systems – Empowering Homes with Intelligent Living</h2>
+      <h2> Smart Home Systems – Empowering Homes with Intelligent Living</h2>
       <div class="history-content">
         <p>
-          At Abhee Smart Home Systems, we don’t just automate spaces — we engineer intelligent lifestyles. With a legacy
+          At  Smart Home Systems, we don’t just automate spaces — we engineer intelligent lifestyles. With a legacy
           that began in 1993 and a future anchored in adaptability, Abhee has emerged as one of South India's most
           trusted names in smart home and security automation.
         </p>
@@ -128,7 +128,7 @@
     <!--why choose us-->
 
     <div class="why-choose-us">
-      <h2>Why Choose AbheeSmartHomes Infrastructure Pvt Ltd?
+      <h2>Why Choose SmartHomes Infrastructure Pvt Ltd?
       </h2>
       <p>Innovation is our dna, making our uniqueness the cornerstone of excellence.
 
