--- a/homeAutomation.html
+++ b/homeAutomation.html
@@ -445,9 +445,7 @@
             <ul>
                 <li><a href="#">Smart Home</a></li>
                 <li><a href="#">Home Theaters</a></li>
-                <li><a href="#">Remote Gates </a></li>
                 <li><a href="#">Security System</a></li>
-                <li><a href="#">Solar Fencing</a></li>
             </ul>
         </div>
         <div class="footer-column">
@@ -456,13 +454,12 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Our Services</a></li>
                 <li><a href="#">Security System</a></li>
-                <li><a href="#">Smart Live</a></li>
             </ul>
         </div>
         <div class="footer-column">
             <h3>Connect With Us</h3>
             <div class="social-icons">
-             <a href="https://www.instagram.com/abhee_smarthome_systems?igsh=ZzI0bGtsZHo3Nzhy" target="_blank" rel="noopener noreferrer">
+<!--              <a href="https://www.instagram.com/abhee_smarthome_systems?igsh=ZzI0bGtsZHo3Nzhy" target="_blank" rel="noopener noreferrer">
                 <i class="fa-brands fa-instagram"></i>
              </a>
               <a href="https://www.facebook.com/share/16DF8Dkm5Z/" target="_blank" rel="noopener noreferrer">
@@ -474,12 +471,12 @@
               <a href="https://x.com/Abheesmarthomes?t=eE-eKZ-H2GqqWJSyysKVDw&s=09" target="_blank" rel="noopener noreferrer">
                 <i class="fa-brands fa-x-twitter"></i>
              </a>
-             
+              -->
             </div>
             <div class="contact-details text-white ">
-                <p> AbhiSmarthomes, 2/68, First Floor, Avinashi Road, guntur, guntur, Andhra-pradesh - 522002</p>
-                <p> AbhiSmarthomes@gmail.com</p>
-                <p> 9838997899</p>
+                <p> guntur, guntur, Andhra-pradesh - 522002</p>
+                <p> Smarthomes@gmail.com</p>
+                <p> 9876543210</p>
             </div>
         </div>
 
@@ -487,7 +484,7 @@
     <div class="line"></div>
 
     <div class="footer-bottom align-content-lg-between">
-        &copy;2025 AbhiSmarthomes. All Rights Reserved | <a href="">Privacy Policy</a> | <a href="">Terms of Use</a>
+        &copy;2025 Smarthomes. All Rights Reserved | <a href="">Privacy Policy</a> | <a href="">Terms of Use</a>
     </div>
     <script>
 
