--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
     <!--hero section-->
     <div id="smartDoorCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active">
+<!--             <div class="carousel-item active">
                 <img src="/images/hero-object/Home-page-2.jpg" class="d-block w-100" alt="Smart Door 1">
                 <h1 class="carousel-title">First-Class Viewing <br>from Your Couch</h1>
-            </div>
-            <div class="carousel-item">
+            </div> -->
+            <div class="carousel-item active">
                 <img src="/images/hero-object/home automations copy-1.jpg" class="d-block w-100" alt="Smart Door 2">
+                  <h1 class="carousel-title">First-Class Viewing <br>from Your Couch</h1>
             </div>
             <div class="carousel-item">
                 <img src="/images/hero-object/remote gates copy.jpg" class="d-block w-100" alt="Smart Door 3">
